<resources>
    <string name="app_name">XML Playground</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="acount">Acount</string>
    <string name="history">History</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="name">UserName</string>
    <string name="username">Username</string>
    <string name="homeTitle">Delicious \nfood for you</string>
    <string name="Search">Search</string>
    <string name="see">See more</string>
    <string name="foodName">PlaceHolder Food Name</string>
    <string name="foodPrice">Food Price</string>
    <string name="deliveryInfo">Delivery info</string>
    <string name="policyHead">Return policy</string>
    <string name="deliveryInfoDetail">Deliver between monday and friday from 9 am to 9 pm</string>
    <string name="policyDetail">"Our foods are double checked before leaving our store so by  any case you found a broken food please contact our hotline immediately "</string>
    <string name="addToChart">Add to cart</string>
</resources>