<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.RegisterFragment">

    <EditText
        android:id="@+id/ETName"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        />

    <EditText
        android:id="@+id/ETEmail"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/EtPassword"
        android:layout_width="match_parent"
        android:background="@drawable/custom_input"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtnRegister"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textAllCaps="false"/>


</LinearLayout>